@@ -1,0 +1,6 @@
+[Sample_Instance]
+   provider: TestInstanceProvider
+   location: TestInstanceProvider
+   namespace: root/cimv2
+   type: instance
+#
