@@ -1,3 +1,7 @@
+2009-09-18  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
+	* Makefile.am test/stageschema.sh
+	[ 2859978 ] TestProviders for SFCB
+
 2009-09-17  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* httpAdapter.c:
